Adds automatic action creation and property selection

--- a/iOS_Aura/Base.lproj/Schedules.storyboard
+++ b/iOS_Aura/Base.lproj/Schedules.storyboard
@@ -124,8 +124,39 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="WSq-ht-0dn">
+                                        <rect key="frame" x="0.0" y="88" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WSq-ht-0dn" id="PBh-sJ-T7w">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Property" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000596046448" translatesAutoresizingMaskIntoConstraints="NO" id="3dW-vE-evO">
+                                                    <rect key="frame" x="8" y="11" width="165" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yyb-zQ-nNZ">
+                                                    <rect key="frame" x="181" y="-86" width="411" height="216"/>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="UMc-Vq-NeK" id="nxX-Vp-L7l"/>
+                                                        <outlet property="delegate" destination="UMc-Vq-NeK" id="Xx7-mm-PUS"/>
+                                                    </connections>
+                                                </pickerView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Yyb-zQ-nNZ" secondAttribute="trailing" id="57h-ak-qTp"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="3dW-vE-evO" secondAttribute="leading" id="KNY-M5-ss2"/>
+                                                <constraint firstItem="Yyb-zQ-nNZ" firstAttribute="centerY" secondItem="3dW-vE-evO" secondAttribute="centerY" id="TsC-5Z-dkD"/>
+                                                <constraint firstItem="3dW-vE-evO" firstAttribute="width" secondItem="Yyb-zQ-nNZ" secondAttribute="width" multiplier="0.4" id="cCw-Uj-uMY"/>
+                                                <constraint firstItem="3dW-vE-evO" firstAttribute="centerY" secondItem="PBh-sJ-T7w" secondAttribute="centerY" id="lds-Uw-6BG"/>
+                                                <constraint firstItem="Yyb-zQ-nNZ" firstAttribute="leading" secondItem="3dW-vE-evO" secondAttribute="trailing" constant="8" id="tVT-ka-c6E"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="127" id="2Hd-6l-xx4">
-                                        <rect key="frame" x="0.0" y="88" width="600" height="127"/>
+                                        <rect key="frame" x="0.0" y="132" width="600" height="127"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2Hd-6l-xx4" id="Idf-lJ-3h9">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="127"/>
@@ -169,7 +200,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="134" id="M3X-nP-FIL">
-                                        <rect key="frame" x="0.0" y="215" width="600" height="134"/>
+                                        <rect key="frame" x="0.0" y="259" width="600" height="134"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="M3X-nP-FIL" id="6Vw-vG-JZk">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="134"/>
@@ -214,7 +245,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="kLT-Ob-6Lu">
-                                        <rect key="frame" x="0.0" y="349" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="393" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kLT-Ob-6Lu" id="vZj-7l-RU2">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -248,7 +279,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="opi-7k-QTb">
-                                        <rect key="frame" x="0.0" y="393" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="437" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="opi-7k-QTb" id="8SE-Zk-J7T">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -274,7 +305,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="FtV-jv-vx8">
-                                        <rect key="frame" x="0.0" y="437" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="481" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FtV-jv-vx8" id="XX2-pS-ZqK">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -314,6 +345,7 @@
                         <outlet property="offTimeDatePicker" destination="GSR-Du-aBG" id="DiW-eD-kbf"/>
                         <outlet property="onDatePicker" destination="VQs-Da-xnH" id="NfW-Kx-bKK"/>
                         <outlet property="onTimeDatePicker" destination="DOp-b0-LDd" id="Pd5-mO-cQg"/>
+                        <outlet property="propertyPicker" destination="Yyb-zQ-nNZ" id="dJh-NK-l6P"/>
                         <outlet property="repeatPicker" destination="OiY-e6-61h" id="TDz-vR-iSv"/>
                         <outlet property="saveScheduleButton" destination="tbT-xf-qaJ" id="Rkw-e6-oqK"/>
                         <outlet property="utcSwitch" destination="wVs-AJ-8aO" id="Zq0-Dw-FDn"/>
